[package]
name = "blh"
version = "0.3.0"
authors = ["sinkuu <sinkuupump@gmail.com>"]
license = "MIT/Apache-2.0"
description = "conversion between geodetic and geocentric coordinates"
readme = "README.md"
repository = "https://github.com/sinkuu/blh"
documentation = "https://docs.rs/blh/*/blh/"

[dependencies]
euclid = "0.10.2"
approx = "0.1.1"
